--- a/Myers/lecture4.tex
+++ b/Myers/lecture4.tex
@@ -16,13 +16,15 @@
 \newcommand{\refl}{\hourglass}
 
 \title{Security-Typed Languages \\ \Large{Lecture 4}} 
-\author{Renate Robin Eilers  \and Cristina \and Baber Rehman}
+\author{Renate Robin Eilers  \and Cristina Matache \and Baber Rehman}
+
+\date{June 20, 2019}
 
 \begin{document}
 
 \maketitle
 
-This is the fourth talk presented by Andrew Myers in OPLSS 2019.
+This is the fourth talk presented by Andrew Myers in OPLSS 2019, University of Oregon, USA.
 
 \section{Transparent Endorsement}
 
