--- a/Ahmed/lecture2.tex
+++ b/Ahmed/lecture2.tex
@@ -6,6 +6,8 @@
 \usepackage{bussproofs}
 \usepackage{listings}
 \usepackage{tikz}
+\usepackage{ amssymb }
+\usepackage{ stmaryrd }
 \usepackage{rotating}
 \usetikzlibrary{matrix,patterns}
 
@@ -39,5 +41,20 @@ $\sigma$ ::= int \textbar \hspace{0.1cm} $\sigma_1$ $\rightarrow$ $\sigma_2$
 \subsubsection{Terms}
 
 \subsection{Target Language}
+
+
+\begin{theorem}[Type Preservation]
+If $\Gamma$ $\vdash$ $e_S$ : $\sigma$ and  $\Gamma$ $\vdash$ $e_S$ : $\alpha$ $\rightsquigarrow$ $e_T$ then $\Gamma_S^+$ $\vdash$ $e_T$ : $\sigma^+$
+\end{theorem}
+
+For correctness, we want to show $e_S$ $\approx$ $e_T$. This is not contexual equivalance because source language and target language are two different languages.
+There are many ways to prove compiler correction. We want to say that when:
+\begin{center}
+ $e_S$ $\approx$ $e_T$ then $\sigma$ $\approx$ $\sigma^+$
+\end{center}
+V$\llbracket$ $\sigma$ $\rrbracket$  = \{  ($V_S$ , $V_T$) $\textbar$ . $\vdash$ $V_{S}$ : $\sigma$ $\wedge$ . ; . $\vdash$ $V_{T}$ : $\sigma^+$ ..... \} \\
+V$\llbracket$ ints $\rrbracket$ = \{ ($n_S$ , $n_T$) \} \\
+V$\llbracket$ $\sigma_1$ $\rightarrow$ $\sigma_2$ $\rrbracket$ = \{ ($\lambda$x:$\sigma_1$ . $e_S$ \}
+
 
 \end{document}
