--- a/Harper/lec2.tex
+++ b/Harper/lec2.tex
@@ -244,7 +244,7 @@ Therefore by-value is superior. Hands down victory!
 
 By-name: there are no booleans, and there are no natural numbers -- you
 cannot have them.  Because undefininedness plays the role of a value.
-It is wrong to say "if $x : 2$ then $x$ converges", because $x$ can stand for arbitrary divergent program.
+It is wrong to say ``if $x : 2$ then $x$ converges'', because $x$ can stand for arbitrary divergent program.
 Reasoning by cases is never valid in by-name semantics.
 
 \vspace{1em}
